Updated torque setup

--- a/all-in-one/heat.yaml
+++ b/all-in-one/heat.yaml
@@ -123,12 +123,12 @@ resources:
             /bin/sed -i 's/your_image/$worker_image$/' /opt/all-in-one/srv/salt/dynamiccluster/dynamiccluster.yaml
             /bin/sed -i 's/your_flavor/$worker_type$/' /opt/all-in-one/srv/salt/dynamiccluster/dynamiccluster.yaml
             /bin/sed -i 's/your_domain/$domain_id$/' /opt/all-in-one/srv/salt/dynamiccluster/dynamiccluster.yaml
-            /usr/bin/qmgr -c 'create queue default'
-            /usr/bin/qmgr -c 'set queue default queue_type = Execution'
-            /usr/bin/qmgr -c 'set queue default resources_default.walltime = 9000:00:00'
-            /usr/bin/qmgr -c 'set queue default enabled = True'
-            /usr/bin/qmgr -c 'set queue default started = True'
-            /usr/bin/qmgr -c 'set server default_queue = default'
+            #/usr/bin/qmgr -c 'create queue default'
+            #/usr/bin/qmgr -c 'set queue default queue_type = Execution'
+            #/usr/bin/qmgr -c 'set queue default resources_default.walltime = 9000:00:00'
+            #/usr/bin/qmgr -c 'set queue default enabled = True'
+            #/usr/bin/qmgr -c 'set queue default started = True'
+            #/usr/bin/qmgr -c 'set server default_queue = default'
           params:
             $security_group$: { get_resource: dynamic_cluster_sg }
             $key_name$: { get_param: key_name }
